# auto-lsp

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  LICENSE.TXT  README.MD  bench.sh  release-plz.toml  wasi-test.sh
core/: CHANGELOG.md  Cargo.toml
core/src/: builders.rs  convert.rs  document.rs  find.rs  lib.rs  pending_symbol.rs  regex.rs  semantic_tokens_builder.rs  symbol.rs  workspace.rs
core/src/core_ast/: capabilities.rs  checks.rs  core.rs  data.rs  mod.rs  references.rs  symbol.rs  update.rs
core/src/core_build/: buildable.rs  downcast.rs  main_builder.rs  mod.rs  parse.rs  stack_builder.rs  symbol.rs  utils.rs
core/src/document/: mod.rs
core/src/document/texter_impl/: change.rs  updateable.rs
core/src/root/: checks.rs  comments.rs  lexer.rs  mod.rs  parse.rs  regex.rs
core/src/salsa/: db.rs  tracked.rs
core/src/workspace/: ast.rs  checks.rs  comments.rs  lexer.rs  mod.rs  parse.rs  regex.rs
crates/bench/: Cargo.toml
crates/bench/benches/: build_ast.rs
crates/codegen/: CHANGELOG.md  Cargo.toml  README.md
crates/codegen/src/: ir.rs  json.rs  lib.rs  output.rs  supertypes.rs  utils.rs
crates/codegen/src/tests/: gen.rs
crates/codegen/src/tests/python/: generate.rs
crates/core/: CHANGELOG.md  Cargo.toml
crates/core/src/: document_symbols_builder.rs  errors.rs  lib.rs  parsers.rs  regex.rs  semantic_tokens_builder.rs  span.rs  utils.rs
crates/core/src/ast/: builder.rs  mod.rs  node.rs
crates/core/src/ast_node/: builder.rs  capabilities.rs  mod.rs  node.rs
crates/core/src/core_ast/: capabilities.rs  core.rs  data.rs  display.rs  mod.rs  node.rs  symbol.rs
crates/core/src/core_build/: buildable.rs  downcast.rs  lexer.rs  mod.rs  parse.rs  stack_builder.rs  symbol.rs  utils.rs
crates/core/src/document/: mod.rs
crates/core/src/document/texter_impl/: change.rs  updateable.rs
crates/core/src/salsa/: db.rs  lexer.rs  mod.rs  tracked.rs
crates/default/: CHANGELOG.md  Cargo.toml  README.md
crates/default/src/db/: file.rs  lexer.rs  mod.rs  tracked.rs
crates/default/src/server/: capabilities.rs  file_events.rs  mod.rs  workspace_init.rs
crates/proc-macros/: CHANGELOG.md  Cargo.toml
crates/proc-macros/src/: filter.rs  lib.rs  meta.rs  paths.rs
crates/proc-macros/src/enum/: enum_builder.rs  mod.rs  variant_builder.rs
crates/proc-macros/src/struct/: feature_builder.rs  field_builder.rs  mod.rs  struct_builder.rs
crates/proc-macros/src/utilities/: filter.rs  filter2.rs  mod.rs
crates/server/: CHANGELOG.md  Cargo.toml  README.md
crates/server/src/: init.rs  lib.rs  main_loop.rs  notification_registry.rs  options.rs  request_registry.rs  task_pool.rs
examples/ast-html/: Cargo.toml  README.md  build.rs
examples/ast-html/src/: db.rs  generated.rs  lib.rs
examples/ast-html/src/tests/: document_links.rs  files.rs  mod.rs
examples/ast-html/src/tests/corpus/: mod.rs  utils.rs
examples/ast-html/src/tests/corpus/snapshots/: ast_html__tests__corpus__all_caps_doctype@name.snap  ast_html__tests__corpus__col_group_elements_without_end_tags@name.snap  ast_html__tests__corpus__custom_tags@name.snap  ast_html__tests__corpus__dt_and_dl_elements_without_close_tags@name.snap  ast_html__tests__corpus__li_elements_without_close_tags@name.snap  ast_html__tests__corpus__multiple_entities_in_tag_content@name.snap  ast_html__tests__corpus__named_entities_in_tag_content@name.snap  ast_html__tests__corpus__nested_tags@name.snap  ast_html__tests__corpus__numeric_entities_in_tag_content@name.snap  ast_html__tests__corpus__omitted_end_tags@name.snap  ast_html__tests__corpus__raw_text_elements@name.snap  (+15 more)
examples/ast-python/: Cargo.toml  README.md  build.rs
examples/ast-python/src/: db.rs  generated.rs  lib.rs
examples/ast-python/src/capabilities/: code_actions.rs  code_lenses.rs  completion_items.rs  diagnostics.rs  document_symbols.rs  folding_ranges.rs  hover.rs  inlay_hints.rs  mod.rs  selection_ranges.rs  semantic_tokens.rs  workspace_diagnostics.rs  workspace_symbols.rs
examples/ast-python/src/tests/: mod.rs
examples/ast-python/src/tests/capabilities/: code_actions.rs  code_lenses.rs  document_symbols.rs  hover.rs  inlay_hints.rs  iter.rs  mod.rs  semantic_tokens.rs
examples/ast-python/src/tests/corpus/: expressions.rs  literals.rs  mod.rs  pattern_matching.rs  statements.rs  utils.rs
examples/ast-python/src/tests/db/: callbacks.rs  mod.rs  salsa.rs  type_errors.rs
examples/native/: Cargo.toml  README.md  package.json
examples/native/src/: lib.rs  main.rs  requests.rs  server.rs
examples/native/src/testbed/nested/: file3.py
examples/native/src/tests/: client.json  error_handling.rs  file_notifications.rs  mod.rs  server.rs  stdio.rs
examples/vscode-native/server/: Cargo.toml  package.json
examples/vscode-native/server/src/: main.rs
examples/vscode-wasi/server/: Cargo.toml  package.json
examples/vscode-wasi/server/src/: main.rs
proc-macros/: CHANGELOG.md  Cargo.toml
proc-macros/src/: enum_builder.rs  feature_builder.rs  lib.rs  meta.rs  paths.rs  struct_builder.rs
proc-macros/src/enum/: enum_builder.rs  mod.rs  variant_builder.rs  variants_builder.rs
proc-macros/src/features/: accessor.rs  check.rs  comment.rs  lsp_code_lens.rs  lsp_completion_item.rs  lsp_document_symbol.rs  lsp_go_to_declaration.rs  lsp_go_to_definition.rs  lsp_hover_info.rs  lsp_inlay_hint.rs  lsp_semantic_token.rs  mod.rs  reference.rs  scope.rs
proc-macros/src/struct/: feature_builder.rs  field_builder.rs  fields_builder.rs  mod.rs  struct_builder.rs
proc-macros/src/struct/features/: check.rs  comment.rs  lsp_code_lens.rs  lsp_completion_item.rs  lsp_document_symbol.rs  lsp_go_to_declaration.rs  lsp_go_to_definition.rs  lsp_hover_info.rs  lsp_inlay_hint.rs  lsp_invoked_completion_item.rs  lsp_semantic_token.rs  mod.rs  reference.rs  scope.rs
proc-macros/src/utilities/: extract_fields.rs  filter.rs  format_tokens.rs  mod.rs
test/vscode-wasi-lsp/server/: Cargo.toml  package.json
test/vscode-wasi-lsp/server/src/: main.rs
test/vscode-wasi-lsp/server/src/symbols/: mod.rs  symbols.rs
(+509 files in other folders)
