[package]
name = "auto-lsp"
authors = ["Clauzel Adrien"]
license = "GPL-3.0"
repository = "https://github.com/adclz/auto-lsp"
description = """
A rust crate for creating AST and LSP servers powered by tree-sitter.
"""
categories = ["parsing"]
keywords = ["parser", "tree-sitter", "lsp"]
version = "0.5.2"
edition = "2021"
readme = "README.MD"

[workspace]
members = ["crates/core", "crates/codegen", "crates/server", "crates/default"]
exclude = [
    "examples/vscode-wasi/server",
    "examples/vscode-native/server",
    "examples/native",
    "examples/ast-python",
    "examples/ast-html",
]

[features]
default = ["dep:auto-lsp-default"]
lsp_server = ["dep:auto-lsp-server", "dep:lsp-server"]
wasm = ["parking_lot/nightly", "auto-lsp-core/wasm"]

[workspace.dependencies]
serde = "1.0.219"
serde_json = "1.0.140"
auto-lsp-core = { path = "./crates/core", version = "0.6.0" }
auto-lsp-server = { path = "./crates/server", version = "0.1.0" }
auto-lsp-default = { path = "./crates/default", version = "0.1.0" }
texter = { version = "0.2.0", default-features = false }
lsp-types = "0.94.1"
lsp-server = "0.7.8"
crossbeam-channel = "0.5.15"
tree-sitter = "0.25.5"
downcast-rs = "2.0.1"
streaming-iterator = "0.1.9"
parking_lot = "0.12.4"
log = "0.4.27"
rayon = "1.10"
anyhow = "1.0.98"
regex = "1.11.1"
rstest = "0.25.0"
salsa = "0.22.0"
dashmap = "6.1.0"
thiserror = "2.0.12"
ariadne = "0.5.1"
fastrace = "0.7.9"
walkdir = "2.5.0"
rayon-par-bridge = "0.1.0"

[dependencies]
tree-sitter-language = "0.1.5"
tree-sitter = { workspace = true }
lsp-types = { workspace = true }
anyhow = { workspace = true }
parking_lot = { workspace = true }
salsa = { workspace = true }
texter = { workspace = true, default-features = false }
auto-lsp-core = { workspace = true }
auto-lsp-server = { workspace = true, optional = true }
auto-lsp-default = { workspace = true, optional = true }
lsp-server = { workspace = true, optional = true }

[package.metadata.docs.rs]
features = ["default", "lsp_server"]
