[workspace.package]
authors = ["Clauzel Adrien"]
license = "GPL-3.0"
edition = "2024"
repository = "https://github.com/adclz/auto-lsp"

[package]
name = "auto-lsp"
description = """
A rust crate for creating AST and LSP servers powered by tree-sitter.
"""
categories = ["parsing"]
keywords = ["parser", "tree-sitter", "lsp"]
version = "0.6.2"
readme = "README.MD"
authors = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
edition = { workspace = true }

[workspace]
members = [
    "crates/core",
    "crates/codegen",
    "crates/server",
    "crates/default",
    "crates/bench",
    "examples/ast-python",
    "examples/ast-html",
    "examples/ast-json",
    "examples/vscode-native/server",
]
exclude = [
    "examples/vscode-native/server",
    "examples/native",
    "examples/ast-python",
    "examples/ast-html",
    "examples/ast-json",
]

[features]
default = ["dep:auto-lsp-default"]
lsp_server = ["dep:auto-lsp-server", "dep:lsp-server"]
wasm = ["parking_lot/nightly"]

[workspace.dependencies]
serde = "1.0.228"
serde_json = "1.0.149"
auto-lsp-core = { path = "./crates/core", version = "0.7.0" }
auto-lsp-server = { path = "./crates/server", version = "0.1.2" }
auto-lsp-default = { path = "./crates/default", version = "0.1.2" }
texter = { version = "0.3.0", default-features = false, features = [
    "tree-sitter",
] }
lsp-types = "0.94.1"
lsp-server = "0.7.9"
crossbeam-channel = "0.5.15"
tree-sitter = "0.26.5"
tree-sitter-language = "0.1.7"
tree-sitter-python = "0.23.6"
tree-sitter-html = "0.23.2"
tree-sitter-json = "0.24.8"
downcast-rs = "2.0.2"
streaming-iterator = "0.1.9"
parking_lot = "0.12.5"
log = "0.4.29"
anyhow = "1.0.101"
regex = "1.11.1"
rstest = "0.25.0"
salsa = "0.26.0"
dashmap = "6.1.0"
thiserror = "2.0.18"
ariadne = "0.6.0"
walkdir = "2.5.0"
bon = "3.6.4"
insta = { version = "1.43.1", features = ["filters"] }

[dependencies]
tree-sitter-language = { workspace = true }
tree-sitter = { workspace = true }
lsp-types = { workspace = true }
anyhow = { workspace = true }
parking_lot = { workspace = true }
salsa = { workspace = true }
texter = { workspace = true }
auto-lsp-core = { workspace = true }
auto-lsp-server = { workspace = true, optional = true }
auto-lsp-default = { workspace = true, optional = true }
lsp-server = { workspace = true, optional = true }

[package.metadata.docs.rs]
features = ["default", "lsp_server"]
