[package]
name = "auto-lsp-core"
version = "0.1.0"
edition = "2021"

[dependencies]
lsp-types = { workspace = true }
tree-sitter = { workspace = true }
downcast-rs = { workspace = true }
streaming-iterator = { workspace = true }
parking_lot = { workspace = true }
log = { workspace = true }
texter = { workspace = true }
rayon = { workspace = true }
const-str = { version = "0.3.1", optional = true }
const_panic = { version = "0.2.11", optional = true }

[features]
assertions = ["const-str", "const_panic"]
rayon = []