[package]
name = "auto-lsp-core"
authors = ["Clauzel Adrien"]
license = "MIT"
repository = "https://github.com/adclz/auto-lsp"
description = """
Core crate for `auto_lsp`.
"""
version = "0.2.0"
edition = "2021"

[dependencies]
lsp-types = { workspace = true }
tree-sitter = { workspace = true }
downcast-rs = { workspace = true }
streaming-iterator = { workspace = true }
parking_lot = { workspace = true }
texter = { workspace = true }
rayon = { workspace = true }
anyhow = { workspace = true }
regex = { workspace = true }
log = { workspace = true, optional = true }
const-str = { version = "0.3.1", optional = true }
const_panic = { version = "0.2.11", optional = true }

[features]
log = ["dep:log"]
rayon = []
