[package]
name = "auto-lsp-core"
authors = ["Clauzel Adrien"]
license = "MIT"
repository = "https://github.com/adclz/auto-lsp"
description = """
Core crate for `auto_lsp`.
"""
version = "0.2.0"
edition = "2021"

[dependencies]
lsp-types = { workspace = true }
tree-sitter = { workspace = true }
downcast-rs = { workspace = true }
streaming-iterator = { workspace = true }
parking_lot = { workspace = true }
texter = { workspace = true }
anyhow = { workspace = true }
regex = { workspace = true }
cfg-if = { workspace = true }
const-str = { version = "0.3.1", optional = true }
const_panic = { version = "0.2.11", optional = true }
log = { workspace = true, optional = true }
miette = { workspace = true, features = ["fancy"], optional = true }
thiserror = { workspace = true, optional = true }
rayon = { workspace = true, optional = true }
[features]
log = ["dep:log"]
deadlock_detection = ["parking_lot/nightly", "parking_lot/deadlock_detection"]
incremental = []
rayon = ["dep:rayon"]
miette = ["dep:miette", "dep:thiserror"]