[package]
name = "auto-lsp-macros"
version = "0.1.0"
edition = "2021"

[dependencies]
proc-macro2 = "1.0"
syn = { features = ["full"], version = "2.0" }
quote = "1.0"
darling = "0.20.10"
structx = "0.1.11"

[lib]
proc-macro = true

[build-dependencies]
inwelling = "0.5"

[package.metadata.inwelling]
structx = true
