[package]
name = "auto-lsp-bench"
publish = false
authors = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
edition = { workspace = true }

[dependencies]
auto-lsp = { path = "../.." }
ast-python = { path = "../../examples/ast-python" }
divan = { version = "3.0.5", package = "codspeed-divan-compat" }

[[bench]]
name = "build_ast"
harness = false
