[package]
name = "auto-lsp-core"
authors = ["Clauzel Adrien"]
license = "GPL-3.0"
repository = "https://github.com/adclz/auto-lsp"
description = """
Core crate for `auto_lsp`.
"""
version = "0.5.0"
edition = "2021"

[dependencies]
lsp-types = { workspace = true }
tree-sitter = { workspace = true }
downcast-rs = { workspace = true }
streaming-iterator = { workspace = true }
parking_lot = { workspace = true }
texter = { workspace = true }
anyhow = { workspace = true }
regex = { workspace = true }
cfg-if = { workspace = true }
aho-corasick = { workspace = true }
salsa = { workspace = true }
dashmap = { workspace = true }
ariadne = { workspace = true, features = ["auto-color"] }
log = { workspace = true, optional = true }
rayon = { workspace = true, optional = true }
thiserror = { workspace = true }
const-str = { version = "0.3.1", optional = true }
const_panic = { version = "0.2.11", optional = true }

[dev-dependencies]
tree-sitter-html = { workspace = true }
rstest = { workspace = true }

[features]
log = ["dep:log"]
wasm = ["parking_lot/nightly"]
