[package]
name = "auto-lsp-default"
description = """
Default database and server capabilities for `auto_lsp`.
"""
version = "0.1.2"
readme = "README.md"
authors = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
edition = { workspace = true }

[dependencies]
tree-sitter = { workspace = true }
auto-lsp-core = { workspace = true }
auto-lsp-server = { workspace = true }
lsp-types = { workspace = true }
walkdir = { workspace = true }
salsa = { workspace = true }
dashmap = { workspace = true }
texter = { workspace = true }
parking_lot = { workspace = true }
log = { workspace = true }
rayon = { workspace = true }
rayon-par-bridge = { workspace = true }
bon = { workspace = true }
anyhow = { workspace = true }

[dev-dependencies]
tempfile = "3.19.0"
