[package]
name = "auto-lsp-macros"
authors = ["Clauzel Adrien"]
license = "MIT"
repository = "https://github.com/adclz/auto-lsp"
description = """
Macros for `auto_lsp`.
"""
version = "0.1.5"
edition = "2021"

[dependencies]
proc-macro2 = "1.0"
syn = { features = ["full"], version = "2.0" }
quote = "1.0"
darling = "0.20.10"
nested-struct = "0.1.0"

[lib]
proc-macro = true
