[package]
name = "auto-lsp-server"
authors = ["Clauzel Adrien"]
license = "GPL-3.0"
repository = "https://github.com/adclz/auto-lsp"
description = """
Default database and server capabilities for `auto_lsp`.
"""
version = "0.2.0"
edition = "2021"
readme = "README.md"

[dependencies]
auto-lsp-core = { workspace = true }
lsp-server = { workspace = true }
crossbeam-channel = { workspace = true }
lsp-types = { workspace = true }
salsa = { workspace = true }
texter = { workspace = true }
log = { workspace = true }
rayon = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
