[package]
name = "auto-lsp-server"
description = """
Default database and server capabilities for `auto_lsp`.
"""
version = "0.1.2"
readme = "README.md"
authors = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
edition = { workspace = true }

[dependencies]
auto-lsp-core = { workspace = true }
lsp-server = { workspace = true }
crossbeam-channel = { workspace = true }
lsp-types = { workspace = true }
salsa = { workspace = true }
texter = { workspace = true }
log = { workspace = true }
rayon = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
crossbeam-utils = "0.8.21"
jod-thread = "1.0.0"

[target.'cfg(unix)'.dependencies]
libc = { version = "0.2.153" }

[target.'cfg(windows)'.dependencies]
miow = "0.6.0"
windows-sys = { version = "0.60", features = ["Win32_Foundation"] }
