[package]
name = "ast-html"
authors = ["Clauzel Adrien"]
license = "GPL-3.0"
repository = "https://github.com/adclz/auto-lsp"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
tree-sitter-html = { workspace = true }
auto-lsp = { path = "../.." }

[dev-dependencies]
insta = { workspace = true, features = ["filters"] }
rstest = { workspace = true }
regex = { workspace = true }

[profile.dev.package]
insta.opt-level = 3
similar.opt-level = 3

[build-dependencies]
tree-sitter-html = { workspace = true }
auto-lsp = { path = "../.." }
auto-lsp-codegen = { path = "../../crates/codegen" }
