[package]
name = "ast-python"
authors = ["Clauzel Adrien"]
license = "GPL-3.0"
repository = "https://github.com/adclz/auto-lsp"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
auto-lsp = { path = "../.." }
tree-sitter-python = { workspace = true }
salsa = { workspace = true }

[dev-dependencies]
insta = { workspace = true, features = ["filters"] }
rstest = { workspace = true }

[profile.dev.package]
insta.opt-level = 3
similar.opt-level = 3

[build-dependencies]
tree-sitter-python = { workspace = true }
auto-lsp = { path = "../.." }
auto-lsp-codegen = { path = "../../crates/codegen" }
