[package]
name = "native-lsp"
version = "0.1.0"
edition = "2021"

[dependencies]
auto-lsp = { path = "../../", features = ["lsp_server"] }
ast-python = { path = "../ast-python" }
assert_cmd = { workspace = true }
tokio = { workspace = true, features = ["full"] }
escargot = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }

[dev-dependencies]
rstest = { workspace = true }
