[package]
name = "native-lsp"
version = "0.1.0"
edition = "2024"

[dependencies]
auto-lsp = { path = "../../", features = ["lsp_server"] }
ast-python = { path = "../ast-python" }
escargot = "0.5.13"
assert_cmd = "2.0.16"
tokio = { version = "1.44.2", features = ["full"] }
serde = "1.0.219"
serde_json = "1.0.140"

[dev-dependencies]
rstest = "0.25.0"
