[package]
name = "vscode-lsp-server"
version = "0.1.0"
authors = { workspace = true }
edition = { workspace = true }
publish = false

[dependencies]
auto-lsp = { path = "../../../", features = ["lsp_server"] }
ast-python = { path = "../../ast-python" }
tree-sitter-python = { workspace = true }
stderrlog = "0.6.0"
