[package]
name = "vscode-wasi-server"
version = "0.1.0"
authors = { workspace = true }
edition = { workspace = true }
publish = false

[dependencies]
auto-lsp = { path = "../../../", features = ["lsp_server", "wasm"] }
ast-python = { path = "../../ast-python" }
tree-sitter-python = { workspace = true }
